02-gatewayapi/envoy/03-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: demo-app
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      # hostname: app.bitrunner.local
      tls:
        mode: Terminate
        certificateRefs:
          - name: demo-app-tls
            namespace: demo-app
      allowedRoutes:
        namespaces:
          from: All
