02-gatewayapi/envoy/05-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routes
  namespace: demo-app
spec:
  parentRefs:
    - name: eg
      sectionName: http
      kind: Gateway
  hostnames:
    - "www.bitrunner.local"
  rules:
    - backendRefs:
        - kind: Service
          name: backend
          namespace: demo-app
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-http
  namespace: demo-app
spec:
  parentRefs:
    - name: eg
      sectionName: https
      kind: Gateway
  hostnames:
    - "app.bitrunner.local"
  rules:
    - backendRefs:
        - kind: Service
          name: whoami
          namespace: demo-app
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
